# autowiring

./: .editorconfig  .gitignore  .travis.yml  AnySharedPointer.h  AnySharedPointerTest.cpp  AnySharedPointerTest.h  AutoAnchor.h  AutoAnchorTest.cpp  AutoAnchorTest.h  AutoCheckout.h  AutoFactory.h  AutoFilter.cpp  AutoFilter.h  AutoFilterDescriptor.h  AutoFilterTest.cpp  AutoFilterTest.h  AutoFuture.cpp  AutoFuture.h  AutoInjectable.h  AutoInjectableTest.cpp  AutoInjectableTest.h  AutoJob.cpp  AutoJob.h  AutoJobTest.cpp  AutoJobTest.h  AutoLocalTest.cpp  AutoLocalTest.h  AutoNetServer.cpp  AutoNetServer.h  AutoNetServerTest.cpp  AutoNetServerTest.h  AutoNetworkMonitor.cpp  AutoNetworkMonitor.h  AutoOutTest.cpp  AutoOutTest.h  AutoOutputTest.cpp  AutoOutputTest.h  AutoPacket.cpp  AutoPacket.h  AutoPacketFactory.cpp  (+1235 more)
Autonet/: AutonetViz.cpp  CMakeLists.txt  stdafx.h
AutonetVisualizer/: .gitignore  (+6 more)
C++11/: CMakeLists.txt  CTestTestfile.cmake  README.md  boost_array.h  boost_atomic.h  boost_chrono.h  boost_exception_ptr.h  boost_functional.h  boost_future.h  boost_mutex.h  boost_rvalue.h  boost_shared_ptr.h  boost_system_error.h  boost_thread.h  boost_tuple.h  boost_type_traits.h  boost_utility.h  cpp11.h  make_unique.h  memory.h  memory_nostl11.h  mutex.h  qt5.h  stdafx.cpp  type_index.h  unique_ptr.h
contrib/json11/: CMakeLists.txt  json11.cpp  json11.hpp
examples/: .gitignore  AutoFilterExample.cpp  AutoFilterTutorial.0.0.cpp  AutoFilterTutorial.1.0.cpp  AutoFilterTutorial00.cpp  AutoFilterTutorial01.cpp  AutoNetExample.cpp  CMakeLists.txt  ContextExample.cpp  EventExample.cpp  ThreadExample.cpp  Tutorials.dox
src/: AnySharedPointer.h  AutoCheckout.h  AutoFilterDescriptor.h  AutoFuture.h  AutoInjectable.cpp  AutoInjectable.h  AutoPacket.h  AutoPacketFactory.cpp  AutoPacketFactory.h  AutowirableSlot.h  Autowired.h  AutowiringEvents.h  BasicThread.cpp  BasicThread.h  BasicThreadStateBlock.cpp  BasicThreadStateBlock.h  Bolt.h  BoltBase.h  CMakeLists.txt  ContextCreator.h  ContextCreatorBase.cpp  ContextCreatorBase.h  ContextMember.cpp  ContextMember.h  CoreContext.cpp  CoreContext.h  CoreContextStateBlock.cpp  CoreContextStateBlock.h  CoreJob.cpp  CoreJob.h  CoreRunnable.h  CoreThread.cpp  CoreThread.h  CoreThreadLinux.cpp  CoreThreadMac.cpp  CoreThreadWin.cpp  CurrentContextPusher.cpp  CurrentContextPusher.h  DecorationDisposition.h  DispatchQueue.cpp  (+47 more)
src/autoboost/: CMakeLists.txt
src/autonet/: AutoBoostWebSocketServer.cpp  AutoBoostWebSocketServer.hpp  AutoNetServer.cpp  AutoNetServer.h  AutoNetServerImpl.cpp  AutoNetServerImpl.hpp  AutoNetTransportHttp.cpp  AutoNetTransportHttp.hpp  CMakeLists.txt  IWebSocketServer.hpp  Jzon.cpp  Jzon.h  stdafx.h
src/autonet/test/: AutoNetServerTest.cpp  AutoNetServerTest.hpp  AutoNetTest.cpp  BreakpointTest.cpp  CMakeLists.txt  RPCTest.cpp  WebsocketTest.cpp  gtest-all-guard.cpp  stdafx.cpp  stdafx.h
src/autotesting/: AutowiringEnclosure.cpp  AutowiringEnclosure.h  CMakeLists.txt  EnclosedContextTestBase.cpp  gtest-all-guard.cpp  gtest-all-guard.hpp  stdafx.cpp  stdafx.h
src/autowiring/: AnySharedPointer.cpp  AnySharedPointer.h  AutoConfig.cpp  AutoConfigBase.cpp  AutoConfigListing.cpp  AutoConfigManager.cpp  AutoConfigParser.cpp  AutoConfigParser.hpp  AutoConfigUnix.cpp  AutoConfigWin.cpp  AutoCurrentPacketPusher.h  AutoFilterArgument.h  AutoFilterDescriptor.cpp  AutoFilterDescriptor.h  AutoFuture.cpp  AutoFuture.h  AutoInjectable.cpp  AutoPacket.cpp  AutoPacket.h  AutoPacketFactory.cpp  AutoPacketFactory.h  AutoPacketGraph.cpp  AutoPacketGraph.h  AutoPacketInternal.cpp  AutoPacketInternal.hpp  AutoPacketProfiler.cpp  AutowirableSlot.cpp  AutowirableSlot.h  Autowired.cpp  Autowired.h  AutowiringConfig.h  AutowiringDebug.cpp  AutowiringDebug.h  AutowiringEvents.cpp  AutowiringVersion.h.in  BasicThread.cpp  BasicThread.h  BasicThreadStateBlock.cpp  BasicThreadStateBlock.h  Bolt.h  (+180 more)
src/autowiring/C++11/: boost_array.h  boost_atomic.h  boost_chrono.h  boost_exception_ptr.h  boost_functional.h  boost_future.h  boost_mutex.h  boost_rvalue.h  boost_shared_ptr.h  boost_system_error.h  boost_thread.h  boost_tuple.h  boost_type_traits.h  boost_utility.h  chrono_with_profiling_clock.h  cpp11.h  empty_file.h  filesystem.h  make_unique.h  memory.h  memory_nostl11.h  mutex.h  tr1_unordered_map.h  tr1_unordered_set.h  tuple.h  type_index.h  unique_ptr.h
src/autowiring/benchmark/: AutoBench.cpp  AutowiringBenchmarkTest.cpp  AutowiringBenchmarkTest.hpp  Benchmark.cpp  Benchmark.h  CMakeLists.txt  CanBoostPriorityTest.cpp  ContextSearchBm.cpp  ContextSearchBm.h  ContextTrackingBm.cpp  ContextTrackingBm.h  DispatchQueueBm.cpp  Foo.h  ObjectPoolBm.cpp  ObjectPoolBm.h  PrintableDuration.h  PriorityBoost.cpp  PriorityBoost.h  stdafx.h
src/benchmark/: AutoBench.cpp  Benchmark.cpp  Benchmark.h  CMakeLists.txt  ContextSearchBm.cpp  ContextSearchBm.h  ContextTrackingBm.cpp  ContextTrackingBm.h  DispatchQueueBm.cpp  DispatchQueueBm.h  Foo.h  ObjectPoolBm.cpp  ObjectPoolBm.h  PrintableDuration.h  PriorityBoost.cpp  PriorityBoost.h  stdafx.h
test/: AnySharedPointerTest.cpp  AnySharedPointerTest.h  AutoAnchorTest.cpp  AutoAnchorTest.h  AutoFilterTest.cpp  AutoFilterTest.h  AutoInjectableTest.cpp  AutoInjectableTest.h  AutoNetServerTest.cpp  AutoNetServerTest.h  AutoOutTest.cpp  AutoOutTest.h  AutoOutputTest.cpp  AutoPacketFactoryTest.cpp  AutoPacketFactoryTest.h  AutowiringBenchmarkTest.cpp  AutowiringBenchmarkTest.h  AutowiringTest.cpp  AutowiringTest.h  AutowiringUtilitiesTest.cpp  AutowiringUtilitiesTest.h  BasicThreadTest.cpp  BasicThreadTest.h  BoltTest.cpp  BoltTest.h  CMakeLists.txt  ContextCleanupTest.cpp  ContextCleanupTest.h  ContextCreatorTest.cpp  ContextCreatorTest.h  ContextEnumeratorTest.cpp  ContextEnumeratorTest.h  ContextMapTest.cpp  ContextMemberTest.cpp  ContextMemberTest.h  CoreContextTest.cpp  CoreContextTest.h  CoreJobTest.cpp  CoreJobTest.h  CoreThreadTest.cpp  (+58 more)
test/TestFixtures/: Decoration.h  ExitRaceThreaded.h  FiresManyEventsWhenRun.h  SimpleObject.h  SimpleReceiver.h  SimpleThreaded.h  ThrowingListener.h  ThrowsWhenRun.h
(+6948 files in other folders)
